<resources>
    <string name="app_name">Login</string>
    <string name="username">Username</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="a_name">Name</string>
    <string name="a_email">Email</string>
    <string name="a_phonenumber">Phone Number</string>
    <string name="a_Cpassword">Confirm Password</string>
    <string name="a_register">Submit</string>
    <string name="title_activity_search_countries">SearchCountries</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
</resources>
